<resources>
    <string name="app_name">MyFunFoodApp</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="_01_person_01" />
    <string name="day_s" />
    <string name="canceling" />
    <string name="edition" />
    <string name="_01_dishe_s" />
    <string name="kg" />
    <string name="old" />
    <string-array name="familles">
        <item>MENDJIN</item>
        <item>NGUESSONG</item>
        <item>GUETUISSIE</item>
        <item>NGUEFFO</item>
        <item>DONTSA</item>
        <item>ESSONO</item>
    </string-array>

</resources>